fix colour swatches not showing

--- a/styles.scss
+++ b/styles.scss
@@ -83,7 +83,6 @@ body {
   height: 15px;
   display: inline-block;
   margin: 5px 5px 5px 0;
-  position: absolute;
   bottom: 30px;
 }
 
